--- a/conf X11 trackpad.wiki
+++ b/conf X11 trackpad.wiki
@@ -1,9 +1,11 @@
 == fichier /etc/X11/xorg.conf.d/10-magicktrackpad.conf ==
 
-`Section "InputClass"
+{{{
+Section "InputClass"
  Identifier "Magic Trackpad"
  MatchUSBID "05ac:030e"
  Driver "evdev"
  MatchIsTouchpad "on"
  MatchDevicePath "dev/input/event/*"
-EndSection`
+EndSection
+}}}
