--- a/Vim.wiki
+++ b/Vim.wiki
@@ -7,4 +7,6 @@
 * [http://vimwiki.googlecode.com/hg/misc/vimwikiqrc.pdf vimwiki refcards]
 * `set wildmenu; set wildmode=list:longest,full "grande liste pour l'autocompletion`
 * `:w !tee %` pour forcer l'enregistrement si l'utilisateur courant n'a pas les droits
-
+* `set ignorecase` et `set smartcase` pour des recherhes exact seulement si le motif contient un mix min/maj
+* `set gdefault` pour remplacer par défaut tous les motifs de la ligne
+* http://stevelosh.com/blog/2010/09/coming-home-to-vim/
