--- a/Archlinux.wiki
+++ b/Archlinux.wiki
@@ -48,8 +48,8 @@ Mes notes sur l'installation d'Archlinux
  * ajouter une [[conf X11 trackpad]]
 === Connexion Freebox OpenVPN ===
  * copier le fichier utilisateur de la freebox  `cp ~/downloads/config_openvpn_bridge_{$USER}.ovpn /etc/openvpn/freebox.conf`
- * créer les fichiers reseaux pour [[openvpnclient]] pour l'interface virtuel dans `/etc/netctl` voir https://wiki.archlinux.org/index.php/OpenVPN_Bridge
- * monter l'interface `netctl enable openvpn_tap`et `netctl enable openvpn_bridge`
+ * créer le fichier reseau pour [[openvpnclient]] pour l'interface virtuel dans `/etc/netctl` voir https://wiki.archlinux.org/index.php/OpenVPN_Bridge (mais ne pas installé le fichier bridge que tap)
+ * démarrer l'interface `netctl enable openvpn_tap`
  * démarrer le service `systemctl start openvpn@freebox.service`
- * puis `dhcpd` pour obtenir une ip
-
+ * puis `dhcpd tap0` pour obtenir une ip
+ * si pb pour obtenir l'adresse ip, redémarrer faire un `systemctl restart dhcpcd`
