--- a/openvpnclient.wiki
+++ b/openvpnclient.wiki
@@ -1,4 +1,4 @@
-=== Openvpn conf (client) ===
+= Openvpn conf (client) =
 
 == Ficher /etc/openvpn_tap==
 {{{
@@ -12,15 +12,4 @@ Group='nobody'
 ## Example IP configuration
 #IP=static
 #Address='10.10.1.2/16'
-}}}
-
-== Ficher /etc/openvpn_bridge==
-{{{
-Description="Bridge connection"
-Interface=br0
-Connection=bridge
-BindsToInterfaces=(eth0 eth1 tap0)
-IP=dhcp
-## Ignore (R)STP and immediately activate the bridge
-#SkipForwardingDelay=yes
 }}}
