--- a/Open Source Alt.wiki
+++ b/Open Source Alt.wiki
@@ -1,4 +1,6 @@
-== Alternative to GAFA ==
+= Alternative to GAFA =
 
-= Dropbox Alt =
+== Dropbox Alt ==
 https://ind.ie/pulse/
+http://www.getsync.com
+
