--- a/diary/2014-10-27.wiki
+++ b/diary/2014-10-27.wiki
@@ -2,7 +2,7 @@
 
 ===Startify===
  * [ ] écran de démarrage, complément à NerdTRee
- * [ ] Gestion des session (TODO voir autochargement avec le dossier)
+ * [ ] Gestion des session
 	* [ ]  enregistrement de l'historique
 	
 
