--- a/Command line collection.wiki
+++ b/Command line collection.wiki
@@ -2,8 +2,8 @@
 
 *curl*
 permet de tester un site sans pour autant que le nom soit dans un host ou un dns
-```curl -I --resolve [domain name]:80:[ip] [URL]```
+`curl -I --resolve [domain name]:80:[ip] [URL]`
 
 *connexion réseau*
 Nombre de connexion établie sur port 80
-```netstat -an | grep 80 | grep ESTA | wc -l``
+`netstat -an | grep 80 | grep ESTA | wc -l`
