--- a/Chef.wiki
+++ b/Chef.wiki
@@ -29,3 +29,10 @@ mkdir /etc/chef/source /etc/chef/data_bags /etc/chef/src
 `chef-solo -o recipe[{nom du rep source}(:{recipes name})]`
 
 {nom du rep source} => /etc/chef/src/{nom du rep source}/recipes/{recipe name}
+
+== Notes ==
+
+Pour l'installation d'un packet à la main :
+le télécharger a la main, faire un shasum -a 256 fichier
+mettre le checksum et nom de fichier dans un attribut
+faire que le fichier recipe prenne en compte l'attribut
