--- a/diary/2015-01-18.wiki
+++ b/diary/2015-01-18.wiki
@@ -4,9 +4,13 @@
 Blog d'un type qui switch de vim à emacs
 http://blog.aaronbieber.com
 
+Qualité du code : vim un énorme spaghetti, tout est sous le controle de Bram Moolinar
+En attendant que NeoVim soit aboutit, Emacs en mode Evil est une autre alterantive viable à vim.
+Emacs : Richard Stallman inititateur du projet, gérer de façon plus contributive en 2008 il passe son role de mainteneur principal à 2 contributeurs très actifs. Emacs ne repose pas sur une personne. 
+
 == Learn ==
 Anti-pattern of vimrc http://rbtnn.hateblo.jp/entry/2014/12/28/010913
-Comment bien écrire son vimrc
+Comment bien écrire son vimrc et les mauvaises pratiques
 
 == To test ==
 https://github.com/Wolfy87/vim-enmasse/blob/master/doc/enmasse.txt
