--- a/index.wiki
+++ b/index.wiki
@@ -15,6 +15,11 @@
 	* [[Command line collection]]
 	* [[Book printing (fr)]]
 	* [[Cubase (fr)]]
+
+== Scratchpad ==
+	
+	* [[TO test]]
+	* [[portable vimwiki]]
  
 ----
 
