--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,6 +2,11 @@
 
 == 2015 ==
 
+=== March ===
+    * [[2015-03-09|xmodmap]]
+    * [[2015-03-04|Vimb configuration]]
+    * [[2015-03-03|Tuppervim]]
+
 === February ===
     * [[2015-02-23|Vim meetup 150223]]
 
