--- a/Command line collection.wiki
+++ b/Command line collection.wiki
@@ -16,5 +16,9 @@ Test débit
 
 `wget -O - https://raw.github.com/sivel/speedtest-cli/master/speedtest_cli.py | python`
 
+*Créer un tunnel SSH*
 
+l'option -nNT => sans terminal, 9000 port local et 80 le port distant
+
+`$ ssh -nNT -L 9000:imgur.com:80 user@example.com`
 
