--- a/TO test.wiki
+++ b/TO test.wiki
@@ -2,3 +2,6 @@
  * http://ohmyz.sh
  * http://www.drumminhands.com/2014/06/15/raspberry-pi-photo-booth/
  * pandoc pour faire les conversions de différents markup
+
+= TO DO =
+ * thunderbolt en connexion a chaud (udevadm monitor) https://bbs.archlinux.org/viewtopic.php?id=170294
