--- a/diary/2015-04-21.wiki
+++ b/diary/2015-04-21.wiki
@@ -1,11 +1,19 @@
-= Meetup vimmortel =
+= Meetup 150421 =
 
-== Tips ==
+== News ==
+
+Vim débarque sur Github : https://github.com/vim/vim
+
+== Plugins ==
+
+* A Vim plugin which shows a git diff in the gutter (sign column) and stages/reverts hunks. [[https://github.com/airblade/vim-gitgutter|airblade/vim-gitgutter]]
+* Unobtrusive scratch window. Inspired by scratch.vim, enhanced. [[https://github.com/mtth/scratch.vim|mtth/scratch]]
+
+== Trucs ==
 
 * mapping pour activer la correction
 `nmap <silent> <leader>se :set spelllang=en spell!<CR>`
 `nmap <silent> <leader>sf :set spelllang=fr spell!<CR>`
 * ajouter une ligne d'un fichier dans un autre fichier sans l'ouvrir
 `:.w !cat - >> fileyoudontwantto.open`
-
 
